--- a/app/partials/education.html
+++ b/app/partials/education.html
@@ -1,40 +1,4 @@
-<style>
-.ed-head{
-	background-color: #f4ae54;color:#fff;text-align: center;
-	font-size: 17px;
-	padding:10px 0;
-	margin-top:10px;
-}
-.ed-head p {
-	margin:0;
-}
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-table td{
-  padding: 0.07rem;
-  font-size:0.15rem;
-}
-.bd_tr{
-  border-bottom:1px solid #e0e0e0;
-  text-align: left;
-  line-height: 30px;
-}
-.ed-container{
-	 font-size:0.15rem;
-}
-.ed-container h4{
-	color: #247ad1;
-	font-size: 0.17rem;
-}
-.ed-container img{
-	width:100%;
-	max-height: 4rem;	
-}
-
-</style>
-
+<link rel="stylesheet" href="css/education.css?rev=csdsfdd>
 <div class="wrapper" data-ng-init="init()"  style="margin-bottom: 80px;">
 	<div  >
 		<div class="ed-head" cg-busy="myPromise" >
