--- a/app/partials/bd_pic.html
+++ b/app/partials/bd_pic.html
@@ -84,7 +84,7 @@ body{
 		<div  class="title" style=""><img src="img/right.jpg">&nbsp;上传成功！</div>
 		<div class="text">我们将尽快核实您的保单，请耐心等待</div>
 		<div class="cell " style="margin-top: 0.5rem;">
-		<a href="javascript:void(0)"   class="btn btn_dark_2_primary"  ng-click="goBdM();" >查看保单</a>
+		<a href="javascript:void(0)"   class="btn btn_n_primary"  ng-click="goBdM();" >查看保单</a>
 	</div>
 	</div>
 </div>
@@ -116,6 +116,6 @@ body{
 </div>
 <div class="fixed-btn-container" >
 	<div class="cell " >
-		<a href="javascript:void(0)" ng-click="uploadImg()"  class="btn btn_dark_2_primary " >上传照片</a>
+		<a href="javascript:void(0)" ng-click="uploadImg()"  class="btn btn_n_primary " >上传照片</a>
 	</div>
 </div>
