--- a/app/partials/education.html
+++ b/app/partials/education.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/education.css?rev=csdsfdd>
+<link rel="stylesheet" href="css/education.css?rev=c46c3555c1ad2b4509455b1bb39f115c">
 <div class="wrapper" data-ng-init="init()"  style="margin-bottom: 80px;">
 	<div  >
 		<div class="ed-head" cg-busy="myPromise" >
