--- a/app/partials/index_part.html
+++ b/app/partials/index_part.html
@@ -1,5 +1,8 @@
 
 <style>
+.wrapper{
+  padding:0 10px;
+}
 body{
   background-color: #f5f5f5;
 }
@@ -43,8 +46,9 @@ body{
   border-radius: 0;
 }
 .pay_container img{
-  width:0.17rem;
+  width:0.19rem;
   vertical-align: middle;
+  margin-top: -0.045rem
 }
 #loadingContainer{
   height:350px;
