--- a/app/partials/pay_select_new.html
+++ b/app/partials/pay_select_new.html
@@ -158,7 +158,7 @@ body{
 
 <div style="padding:30px 0;">
 	<div class="cell"  style="overflow: hidden;position: fixed;bottom:0;width:100%;border-radius:0;">
-		<a href="javascript:void(0)" class="btn btn_n_primary " style="border-radius: 0;background-color:#203161;" ng-click="submit()">立即支付</a>
+		<a href="javascript:void(0)" class="btn btn_n_primary "  ng-click="submit()">立即支付</a>
 	</div>
 </div>
 <script type="text/javascript">
