modify the bugs

--- a/app/partials/index_part.html
+++ b/app/partials/index_part.html
@@ -54,6 +54,9 @@ body{
   height:350px;
   background: #fff url(img/loading.gif) no-repeat center/50px;
 }
+#pieChartContainer{
+  padding-top: 0.1rem;
+}
 </style>
 <div id="wrapper" class="wrapper"  data-ng-init="init()">
 
@@ -93,7 +96,7 @@ body{
  <div class="mask" id="share">
      <div id="tip_text" style="margin:0 auto;position: relative;">
 
-       <img  src="img/tip_all.png" style="width:2rem;position:absolute;left:-1.25rem;top:0.02rem;">
+       <img  src="img/tishi.png" style="width:2rem;position:absolute;left:-1.25rem;top:0.02rem;">
       <!--
      <img class="pic" src="img/tip_pic.png" style="position:absolute;left:-0.45rem;top:0.05rem;">
      <img class="word" src="img/tip_word.png?v=1" style="position:absolute;left:0.3rem;top:0.60rem;">
