--- a/app/wx_share/partials/index_part.html
+++ b/app/wx_share/partials/index_part.html
@@ -45,15 +45,18 @@
 			</ul>
 		
 		<p><img src="wx_share/img/my_bd/bx_logo.jpg"><span>领取后请前微信号 [ 诺贝 ] 投保</span></p>
-		<ul class="main_font left">
-			<li>1.长按右侧二维码关注 [诺贝]</li>
-			<li>2.在微信号底部菜单 </br>&nbsp;&nbsp;&nbsp;[ 我的保险劵 ] 投保</li>
-			<li>3.有效期：2016.04.26 ~ 07.26</li>
-		</ul>
-		<!-- 二维码 -->
-		<div class="two_code">
-			<img src="wx_share/img/my_bd/erweima.jpg">
+		<div class="cell_code">
+			<div class="main_font left">
+				<li>1.长按右侧二维码关注 [诺贝]</li>
+				<li>2.在微信号底部菜单 </br>&nbsp;&nbsp;&nbsp;[ 我的保险劵 ] 投保</li>
+				<li>3.有效期：2016.04.26 ~ 07.26</li>
+			</div>
+			<!-- 二维码 -->
+			<div class="two_code">
+				<img src="wx_share/img/my_bd/erweima.jpg">
+			</div>
 		</div>
+		
 	</div>
 	<ul class="footer_border">
 		<li></li>
