--- a/app/wx_share/css/index.css
+++ b/app/wx_share/css/index.css
@@ -143,11 +143,11 @@ body {
   font-size: .12rem;
   /*text-align: center;*/
   border-radius: 5px;
-   display: -webkit-box; /* 老版本语法: Safari, iOS, Android browser, older WebKit browsers. */
-  display: -moz-box; /* 老版本语法: Firefox (buggy) */
-  display: -ms-flexbox; /* 混合版本语法: IE 10 */
-  display: -webkit-flex; /* 新版本语法: Chrome 21+ */
-  display: flex; /* 新版本语法: Opera 12.1, Firefox 22+ */
+   display: -webkit-box; 
+  display: -moz-box;
+  display: -ms-flexbox; 
+  display: -webkit-flex; 
+  display: flex; 
   flex-flow: row;
   position: relative;
 }
