--- a/app/partials/bdm_detail.html
+++ b/app/partials/bdm_detail.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" type="text/css" href="css/bdm_detail.css?rev=eba82e9ba95050261263fa6f28639420">
-div ng-if="isTest == false"  cg-busy="loadingPromise" style="margin-bottom:70px;">
+<div ng-if="isTest == false"  cg-busy="loadingPromise" style="margin-bottom:70px;">
 	<div class="wrapper " id="my_baodan">
 		<img src="img/yiyanzhen.png" style="position: absolute;top:9px;right:11px;width:70px;z-index: 5;display: none">
 		<div class="container" >
