modify the bugs

--- a/app/wx_share/partials/index_part.html
+++ b/app/wx_share/partials/index_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/index.css?rev=fdgfgf">
+<link rel="stylesheet" href="wx_share/css/index.css?rev=fdafagfgf">
 <div class="my_bd_controller">
 	<ul class="layout ul_contrl">
 		<li >
@@ -14,16 +14,16 @@
 			<input class="kong_input" type="button">
 			<input class="input_2" type="button" value="送给好友"> -->
 			<p class="kong_wid45"></p>
-			<p>
-				<a href="###" class="imgwid">
+			<p ng-click="addCoupon();">
+				<a href="###"  class="imgwid">
 					<span>
 						<img src="wx_share/img/my_bd/money.png">
 					</span>
 				</a>
-				<a href="###" class="fontwid">免费领取</a>
+				<a href="###"    class="fontwid">免费领取</a>
 			</p>
 			<p></p>
-			<p>
+			<p  ng-click="showShareTip();" >
 				<a href="###" class="imgwid">
 					<span>
 						<img src="wx_share/img/my_bd/song.png">
