--- a/app/css/baodan_manage_list.css
+++ b/app/css/baodan_manage_list.css
@@ -44,7 +44,7 @@ header .subtitle {
 	background-color: #fff;
 	border-top: 1px solid #e2e2e2;
 	border-bottom: 1px solid #e2e2e2;
-	font-size: 14px;
+	font-size: 15px;
 }
 .cell_hd {
 	text-align: center;
@@ -63,10 +63,10 @@ header .subtitle {
 	left: 0
 }
 .cell_hd span {
-	/*vertical-align: super;*/
-	position: absolute;
-	top:14px;
-	font-size: 14px;
+	vertical-align: 3px;
+	/*position: absolute;*/
+	/*top:14px;*/
+	font-size: 12px;
 	color: #999999;
 }
 .select span{
@@ -111,7 +111,7 @@ header .subtitle {
 
 .container .title {
 	color: #555555;
-	font-size: 15px;
+	font-size: 13px;
 	height: 40px;
 	line-height: 40px;
 	padding-left: 13px;
@@ -157,10 +157,11 @@ header .subtitle {
 	line-height: 0.5rem;
 	height: 0.5rem;
 	color: #999999;
+	font-size: 13px;
 }
 .container .time img {
 	width: 14px;
-	vertical-align: text-bottom;
+	vertical-align: -2px;
 }
 .container .cover {
 	position: absolute;
@@ -256,9 +257,10 @@ header .subtitle {
 .process-container-right .subtitle {
 	color: #555555;
 	line-height: 1;
+	font-size: 13px;
 }
 .cell_hd {
-	height: 50px;
+	height: 44px;
 }
 .tip {
 	width: 100%;
