--- a/app/partials/index_part.html
+++ b/app/partials/index_part.html
@@ -46,9 +46,8 @@ body{
   border-radius: 0;
 }
 .pay_container img{
-  width:0.19rem;
-  vertical-align: middle;
-  margin-top: -0.045rem
+  width:14px;
+  vertical-align: -2px;
 }
 #loadingContainer{
   height:350px;
