--- a/app/partials/information.html
+++ b/app/partials/information.html
@@ -35,10 +35,10 @@
 		</li>
 	</ul>
 <div class="cut_container" >
-		<a class="left cut_cell" ng-click="showTip()">
+		<a class="cut_cell" ng-click="showTip()">
 			部分情况有
 		</a>
-		<a class="right cut_cell"  ng-click="goToubao()">
+		<a class="cut_cell"  ng-click="goToubao()">
 			以上情况全无
 		</a>
 	</div>
