modify the bugs

--- a/app/partials/information.html
+++ b/app/partials/information.html
@@ -1,5 +1,5 @@
 <!-- 投保须知 -->
-<link rel="stylesheet" href="css/information.css?rev=dsfdffghhg">
+<link rel="stylesheet" href="css/information.css?rev=b147ea0d9bd8dd9e9458ba582f64f0ba">
 <div  data-ng-init="init()" cg-busy="myPromise">
 	<ul class="claim_controller">
 		<li>
