--- a/app/css/bdm_detail.css
+++ b/app/css/bdm_detail.css
@@ -81,10 +81,20 @@
 	.insured-item{
 		line-height: .27rem;/*height:0.3rem;*/
 	}
-	.fontW {
-		letter-spacing: .07rem;
-		width: .61rem;
+	.two_word {
+		letter-spacing: 3px;
 	}
+	.three_word {
+		letter-spacing: 6px;
+	}
+	.word_justify {
+                text-align:justify;
+                text-justify:distribute-all-lines;/*ie6-8*/
+                text-align-last:justify;/* ie9*/
+                -moz-text-align-last:justify;/*ff*/
+                -webkit-text-align-last:justify;/*chrome 20+*/
+                width:60px;
+     }
 	b{
 		list-style: none;
 	}
@@ -118,9 +128,7 @@
 		display: block;
 		height: .25rem;
 	}
-	.twowid {
-		letter-spacing: .32rem;
-	}
+	
 	.bd_th{
 	 	background-color: #f5f5f5;
 	}
