modify the bugs

--- a/app/partials/bd_pic.html
+++ b/app/partials/bd_pic.html
@@ -12,6 +12,22 @@ body{
 	color:#222;
 }
 .pic-container ul{
+	width:95%;
+	margin: 0 auto;
+	overflow: hidden;
+	text-align: left;
+	padding-bottom:0.2rem;
+}
+.pic-container li{
+	float:left;
+	margin:13px 1%  0 ;
+	overflow: hidden;
+	width:22%;
+	height:70px;
+	border:1px solid #efefef;
+}
+/*
+.pic-container ul{
 	width:300px;
 	margin: 0 auto;
 	overflow: hidden;
@@ -25,10 +41,13 @@ body{
 	width:70px;
 	height:70px;
 }
+*/
+
 
 .pic-container .add{
+	padding:2px;
 	background: url('../img/add_plus.png') no-repeat center;
-	background-size:100%;
+	background-size:70px;
 }
 .pic-container .add:active{
 	background: url('../img/plus_active.png') no-repeat center;
