--- a/app/wx_share/partials/index_part.html
+++ b/app/wx_share/partials/index_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/index.css?rev=fdgfgf">
+<link rel="stylesheet" href="wx_share/css/index.css?rev=dsfdsfdsfdfsdfdsffyuyt">
 <div class="my_bd_controller">
 	<ul class="layout ul_contrl">
 		<li >
@@ -9,26 +9,19 @@
 		<li>全球航班通用</li>
 	</ul>
 	<div class="logo_controller">
+		<img src="wx_share/img/my_bd/logo.png" srcset="wx_share/img/my_bd/logo.png 568w, wx_share/img/my_bd/logo2.png 667w, wx_share/img/my_bd/logo2.png 736w" >
 		<div class="button_contr">
 			<!-- <input class="input_1" type="button" value="免费领取">
 			<input class="kong_input" type="button">
 			<input class="input_2" type="button" value="送给好友"> -->
 			<p class="kong_wid45"></p>
 			<p>
-				<a href="###" class="imgwid">
-					<span>
-						<img src="wx_share/img/my_bd/money.png">
-					</span>
-				</a>
+				<img class="imgwid" src="wx_share/img/my_bd/money.png">
 				<a href="###" class="fontwid">免费领取</a>
 			</p>
 			<p></p>
 			<p>
-				<a href="###" class="imgwid">
-					<span>
-						<img src="wx_share/img/my_bd/song.png">
-					</span>
-				</a >
+				<img class="imgwid" src="wx_share/img/my_bd/song.png">
 				<a href="###" class="fontwid">送给好友</a>
 			</p>
 			<p class="kong_wid45"></p>
