--- a/app/wx_share/css/index.css
+++ b/app/wx_share/css/index.css
@@ -5,7 +5,7 @@
     font-size: 100px;
   }
   .logo_controller {
-    background: url(../img/my_bd/logo.png) no-repeat ;
+    /*background: url(../img/my_bd/logo.png) no-repeat center;*/
   }
 }
 
@@ -15,7 +15,7 @@
     font-size: 100px;
   }
    .logo_controller {
-    background: url(../img/my_bd/logo.png) no-repeat ;
+    /*background: url(../img/my_bd/logo.png) no-repeat center ;*/
   }
 }
 
@@ -25,7 +25,7 @@
     font-size: 117.18px;
   }
    .logo_controller {
-    background: url(../img/my_bd/logo2.png) no-repeat ;
+   /* background: url(../img/my_bd/logo2.png) no-repeat center;*/
   }
 }
 
@@ -35,7 +35,7 @@
     font-size: 129.37px;
   }
    .logo_controller {
-    background: url(../img/my_bd/logo2.png) no-repeat ;
+    /*background: url(../img/my_bd/logo2.png) no-repeat  center;*/
   }
 }
 
@@ -63,18 +63,18 @@ body {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  border-bottom: 7px solid #e52f62;
-  padding-bottom: .07rem;
+  border-bottom: 5px solid #e52f62;
+  /*padding-bottom: .07rem;*/
 }
 .ul_contrl li:nth-child(2) {
   width: .06rem;
 }
 .ul_contrl li:nth-child(3) {
   width: .84rem;
-  border-bottom: 7px solid #003756;
+  border-bottom: 5px solid #003756;
   font-size: .13rem;
   color: #003756;
-  padding-bottom: .07rem;
+  /*padding-bottom: .07rem;*/
 }
 .ul_contrl li:nth-child(1) p{
   display: inline-block;
@@ -91,13 +91,10 @@ body {
 .logo_controller {
   margin-top: .15rem;
   width: 100%;
-  height: 2.25rem;
-  /*background: url(../img/my_bd/logo.png) no-repeat ;*/
-  background-size: 100% 100%;
+  /*height: 2.6rem;*/
   position: relative;
 }
-
-.logo_controller img {
+ img {
   width: 100%;
   height: 100%;
 }
@@ -124,7 +121,8 @@ body {
 .button_contr {
   position: absolute;
   left: 0;
-  top: 1.5rem;
+  bottom:.45rem;
+  /*top: 1.5rem;*/
   width: 100%;
   /*padding:0 0 0 .18rem;*/
   display: -webkit-box; /* 老版本语法: Safari, iOS, Android browser, older WebKit browsers. */
@@ -136,20 +134,26 @@ body {
 }
 .button_contr p:nth-child(2),p:nth-child(4) {
   display: inline-block;
-  /*width: 1.09rem;*/
-  box-flex: 1;
-  flex-grow: 1;
-  height: .39rem;
+  width: 1.1rem;
+  /* -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;*/
+  /*height: .39rem;*/
   font-size: .12rem;
-  /*text-align: center;*/
+  text-align: center;
   border-radius: 5px;
-   display: -webkit-box; 
+ /* display: -webkit-box; 
   display: -moz-box;
   display: -ms-flexbox; 
   display: -webkit-flex; 
   display: flex; 
-  flex-flow: row;
-  position: relative;
+  flex-flow: row;*/
+  /*position: relative;*/
+  color: #fff;
+  line-height: .4rem;
+
+
 }
 .button_contr p:nth-child(2) {
   background: #e42f62;
@@ -159,37 +163,37 @@ body {
 }
 
 .button_contr p:nth-child(3) {
-  width: .19rem;
+  width: .22rem;
   /*box-flex: 1;
   flex-grow: 1;
   background: yellow;*/
 }
 .kong_wid45 {
-  width: .29rem;
+  /*width: .29rem;*/
   /*background: blue;*/
+   -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 .imgwid {
-  display:inline-block;
-  width: .35rem;
+ /* display:inline-block;
+  width: .35rem;*/
+  vertical-align: middle;
 }
-.imgwid span {
+.imgwid{
   display: inline-block;
   width: .16rem;
   height: .16rem;
-  position: absolute;
+  /*position: absolute;
   left: .15rem;
-  top: .12rem;
+  top: .12rem;*/
 }
 .imgwid span img {
   width: 100%;
   height: 100%;
 }
 .fontwid {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-  line-height: .39rem;
   color: #fff;
 }
 /*
@@ -226,12 +230,13 @@ img  {
   list-style: none;
   color: #a08f66;
   font-size: 12px;
+  line-height: .2rem;
 }
 .font_controller p{
   list-style: none;
   color: #a08f66;
   font-size: .08rem;
-  padding-bottom: .1rem;
+  padding-bottom: .05rem;
 }
 .font_controller img{
   width: .13rem;
@@ -287,7 +292,7 @@ img  {
 }
 .footer_border li:nth-child(1) {
   width: .83rem;
-  border-bottom: 7px solid #003756;
+  border-bottom: 5px solid #003756;
   font-size: .13rem;
   color: #003756;
 }
@@ -299,6 +304,6 @@ img  {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  border-bottom: 7px solid #e52f62;
+  border-bottom: 5px solid #e52f62;
   padding-bottom: .07rem;
 }
