活动页细节修改

--- a/app/wx_share/partials/index_part.html
+++ b/app/wx_share/partials/index_part.html
@@ -11,24 +11,17 @@
 	<div class="logo_controller">
 		<img src="wx_share/img/my_bd/logo.png" srcset="wx_share/img/my_bd/logo.png 568w, wx_share/img/my_bd/logo2.png 667w, wx_share/img/my_bd/logo2.png 736w" >
 		<div class="button_contr">
-			<!-- <input class="input_1" type="button" value="免费领取">
-			<input class="kong_input" type="button">
-			<input class="input_2" type="button" value="送给好友"> -->
 			<p class="kong_wid45"></p>
-			<p>
+			<p ng-click="addCoupon();">
 				<img class="imgwid" src="wx_share/img/my_bd/money.png">
 				<a href="###" class="fontwid">免费领取</a>
 			</p>
 			<p></p>
-			<p>
+			<p ng-click="showShareTip();">
 				<img class="imgwid" src="wx_share/img/my_bd/song.png">
 				<a href="###" class="fontwid">送给好友</a>
 			</p>
 			<p class="kong_wid45"></p>
-			<!-- <div class="money_song">
-				<li><img src="wx_share/img/my_bd/money.png"></li>
-				<li><img src="wx_share/img/my_bd/song.png"></li>
-		 	</div> -->
 		</div>
 	</div>
 	<div class="font_controller">
@@ -49,7 +42,6 @@
 				<img src="wx_share/img/my_bd/erweima.jpg">
 			</div>
 		</div>
-		
 	</div>
 	<ul class="footer_border">
 		<li></li>
